# exploracion-datos

./: .gitignore  hello.py  pyproject.toml
notebooks/: procesamiento_datos.ipynb
slides/: analisis-exploratorio-datos.html  analisis-exploratorio-datos.qmd
